feat(phase9): templates and personalisation (§7.4, FR-4.1…FR-4.6)
Template catalogue administration in the shape Phase 8 established: ManageTemplates
groups the aggregate's CRUD, GetTemplates is the read side, rejections are
ConfigurationConflictException/NotFoundException instead of pipeline verdicts.

Domain (FR-4.1, FR-4.2):
- Template.publishVersion keeps "one sendable version per locale": publishing v2
  archives v1, and publication runs first so a maker/checker rejection leaves the
  previous version published.
- TemplateVersion.updateBody allows rewriting a DRAFT only — a version on review is
  what a reviewer sees, a published one is what sent messages were rendered from.
- TemplateCatalogStatus: deleting a template is archiving it, because its code sits
  in the history of every message rendered from it. An archived card keeps its
  versions and stops being sendable (TemplateApplier rejects it).
- renderPreview/missingVariables for the admin preview: not strict, not
  status-checked, unfilled fields stay visible as {NAME}. Sending stays strict.

Application:
- ManageTemplates (create/update/state, saveVersion, changeVersionState, provider
  mapping) — author and reviewer come from the Actor, never from a command field.
- GetTemplates: card, catalogue page without bodies, preview costing the wording
  with the real SegmentCalculator and the real provider tariffs, per provider with
  a selectable flag (FR-4.4).
- ImportTemplates (FR-4.6): idempotent by wording, reports bad rows and keeps
  going, publishes only with an approver different from the author.

Adapter:
- adapter/in/importer: CSV with a header, columns by name, RFC 4180 quoting, behind
  commhub.import.templates.enabled (off by default).
- TemplatePersistenceAdapter: catalogue status round-trip, findAll page, dropped
  provider mappings actually deleted.
- Fixes a Phase 8 defect: audit_log.before_state/after_state are jsonb while the
  port carries rendered text, so CAST(... AS jsonb) failed on eve